kubernetes/apps/default/nitter/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitter
  labels:
    app.kubernetes.io/part-of: nitter
    app.kubernetes.io/name: nitter
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/part-of: nitter
    app.kubernetes.io/name: nitter
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 8080
      targetPort: http
